--- a/server/fly.toml
+++ b/server/fly.toml
@@ -15,20 +15,11 @@ primary_region = 'ams'
   auto_start_machines = true
   min_machines_running = 1
   processes = ['app']
-
-[[services]]
-  protocol = 'tcp'
-  internal_port = 3001
-  processes = ['app']
-
-  [[services.ports]]
-    port = 80
-    handlers = ['http']
-    force_https = true
-
-  [[services.ports]]
-    port = 443
-    handlers = ['tls', 'http']
+  
+  [[http_service.concurrency]]
+    type = "connections"
+    hard_limit = 1000
+    soft_limit = 500
 
 [[vm]]
   memory = '1gb'
