--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,6 @@ dist
 dist-ssr
 *.local
 
-# Environment variables
-.env
-.env.local
-.env.production
-.env.development
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -29,5 +23,12 @@ dist-ssr
 *.sln
 *.sw?
 
-# OS
-Thumbs.db
+# Environment variables
+.env
+.env.local
+.env.production
+
+# Capacitor
+ios
+android
+.capacitor
