Android platform toegevoegd en geconfigureerd voor Play Store deployment

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cap:build:android": "npm run build && npx cap sync android"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.4",
     "@capacitor/app": "^7.1.0",
     "@capacitor/camera": "^7.0.2",
     "@capacitor/cli": "^7.4.4",
